package pt.ipp.isep.dei.esoft.project.domain;

import java.util.Objects;

/**
 * The type Employee.
 */
public class Employee {
    private final String email;
    private String name;
    private String position;
    private String phone;

    /**
     * Instantiates a new Employee.
     *
     * @param email the email
     */
    public Employee(String email) {
        this.email = email;
    }

    @Override
    public boolean equals(Object o) {
        if (this == o) {
            return true;
        }
        if (!(o instanceof Employee)) {
            return false;
        }
        Employee employee = (Employee) o;
        return email.equals(employee.email);
    }

    @Override
    public int hashCode() {
        return Objects.hash(email);
    }

    /**
     * Has email boolean.
     *
     * @param email the email
     * @return the boolean
     */
    public boolean hasEmail(String email) {
        return this.email.equals(email);
    }


    public Employee clone() {
        return new Employee(this.email);
    }
}
