package pt.ipp.isep.dei.esoft.project.domain.dto;

public class AnnouncementDTO {

}
